--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -14,6 +14,133 @@
   background-color: #fdf6ee;
 }
 
-.container__question {
+.title__questions {
+  color: #512b2b;
+  font-size: 20px;
+  line-height: 1.5;
+  max-width: 1220px;
+  width: 100%;
+  border-bottom: 1px solid #e3e3e3;
+  padding-bottom: 3px;
+}
 
+.box__form {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+
+.title__questions {
+  width: 100%
+}
+
+.box__title {
+  width: 40%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: right;
+
+}
+
+.title__form {
+  text-align: right;
+  font-size: 15px;
+  line-height: 18px;
+  color: #d4c4bc;
+}
+
+.title__form--star {
+  color: #f65f04;
+}
+
+.box__input {
+  width: 60%;
+}
+
+.input__number {
+  width: 100px;
+  font-size: 15px;
+  line-height: 18px;
+  padding: 13px 10px;
+  border-radius: 3px;
+  border: 1px solid #ecf9f3;
+}
+
+.input {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.button__question {
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  background-color: #d5bba5ff;
+  margin-left: 10px;
+  border: none;
+  cursor: pointer;
+
+  &:hover {
+  background-color: #fac92a;
+  }
+}
+
+.box_textArea {
+  justify-content: start;
+}
+
+.title__formArea {
+  text-align: right;
+  font-size: 15px;
+  line-height: 18px;
+  color: #d4c4bc;
+  padding: 0 7px;
+  margin: 0;
+}
+
+.comment__formArea {
+  text-align: left;
+  font-size: 15px;
+  line-height: 18px;
+  color: #d4c4bc;
+  padding: 0 7px;
+  margin: 0;
+}
+
+.textArea {
+  min-width: 300px;
+  min-height: 150px;
+}
+
+.summery__row {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  border-bottom: 1px solid #e3e3e3;
+}
+
+
+.summery__comment {
+  width: 30%;
+  text-align: left;
+  font-size: 15px;
+  line-height: 18px;
+  color: #d4c4bc;
+  padding: 10px 7px;
+  margin: 0;
+}
+
+.summery__result {
+  width: 30%;
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  font-size: 15px;
+  line-height: 18px;
+  padding: 10px 7px;
+  margin: 0;
 }
