--- a/src/App.scss
+++ b/src/App.scss
@@ -55,6 +55,10 @@
   background-color: #fac92a;
 }
 
+.done {
+  background-color: #99cc66;
+}
+
 .navigation__underline {
   background-color: #f9f8f6;
   border-top: 2px solid #ebe7e2;
