--- a/src/styles/questions.scss
+++ b/src/styles/questions.scss
@@ -1,5 +1,3 @@
-
-
 //border: 2px solid #a38b80;
 //border-radius: 50%;
 //                 content: "";
@@ -112,6 +110,7 @@
 
 .textArea {
   min-width: 300px;
+  max-width: 500px;
   min-height: 150px;
 }
 
